# umdk

./: README.ch.md  README.md  RELEASE-NOTES.ch.md  RELEASE-NOTES.md  umdk.spec
LICENSES/: README  Third_Party_Open_Source_Software_Notice.txt  mit.txt
doc/ch/ulock/dlock/: DLock API Guide.ch.md  DLock User Guide.ch.md
doc/ch/urma/: URMA API Guide.ch.md  URMA QuickStart Guide.ch.md  URMA User Guide.ch.md
doc/ch/urpc/: Overview.ch.md  URPC Framework API.ch.md  URPC Message.ch.md  URPC User Guide.ch.md
doc/ch/usock/ums/: UMS API Guide.ch.md  UMS User Guide.ch.md
doc/en/ulock/dlock/: DLock API Guide.md  DLock User Guide.md
doc/en/urma/: URMA API Guide.md  URMA QuickStart Guide.md  URMA User Guide.md
doc/en/urpc/: URPC Framework API.md  URPC User Guide.md
doc/en/usock/ums/: UMS API Guide.md  UMS User Guide.md
src/cam/: README.md
src/cam/comm_operator/pybind/: functions.h  fused_deep_moe.cpp  get_dispatch_layout.cpp  moe_combine_normal.cpp  moe_combine_prefill.cpp  moe_combine_shmem.cpp  moe_dispatch_normal.cpp  moe_dispatch_prefill.cpp  moe_dispatch_shmem.cpp  pybind.cpp  setup.py
src/cam/examples/: fused_deep_moe_sample.py  moe_distribute_sample.py
src/ulock/: CMakeLists.txt
src/ulock/dlock/: CMakeLists.txt
src/ulock/dlock/cmake/: FindGLIB.cmake
src/ulock/dlock/examples/: CMakeLists.txt
src/ulock/dlock/examples/client/: CMakeLists.txt  client_test.cpp  client_test_object.cpp
src/ulock/dlock/examples/include/: example_common.h
src/ulock/dlock/examples/server/: CMakeLists.txt  primary_test.cpp
src/ulock/dlock/include/: CMakeLists.txt
src/ulock/dlock/lib/: CMakeLists.txt
src/ulock/dlock/lib/client/: CMakeLists.txt  client_entry_c.cpp  client_entry_c.h  client_wrapper.cpp  dlock_client.h  dlock_client_cp.cpp  dlock_client_dp.cpp  lock_entry_c.cpp  lock_entry_c.h  object_entry_c.cpp  object_entry_c.h
src/ulock/dlock/lib/common/: CMakeLists.txt  dlock_cipher.cpp  dlock_cipher.h  dlock_common.h  dlock_connection.cpp  dlock_connection.h  dlock_descriptor.cpp  dlock_descriptor.h  dlock_log.cpp  jetty_mgr.cpp  jetty_mgr.h  jetty_mgr_sepconn.cpp  jetty_mgr_sepconn.h  jetty_mgr_uniconn.cpp  jetty_mgr_uniconn.h  ssl_connection.cpp  ssl_connection.h  tcp_connection.cpp  tcp_connection.h  urma_ctx.cpp  urma_ctx.h  utils.cpp  utils.h
src/ulock/dlock/lib/server/: CMakeLists.txt  client_entry_s.cpp  client_entry_s.h  dlock_server.cpp  dlock_server.h  dlock_server_mgr.cpp  dlock_server_mgr.h  lock_entry_s.cpp  lock_entry_s.h  lock_memory.cpp  lock_memory.h  object_entry_s.cpp  object_entry_s.h  object_memory.cpp  object_memory.h  server_node.cpp  server_node.h  server_wrapper.cpp
src/urma/: CMakeLists.txt  cmake_uninstall.cmake.in
src/urma/cmake/: FindKernelHeaders.cmake
src/urma/common/: CMakeLists.txt  ub_bitmap.c  ub_dstring.c  ub_get_clock.c  ub_hash.c  ub_hmap.c  ub_perf_cycle.c  ub_util.c
src/urma/common/include/: ub_barrier.h  ub_bitmap.h  ub_dstring.h  ub_hash.h  ub_hmap.h  ub_list.h  ub_perf_cycle.h  ub_util.h
src/urma/examples/: CMakeLists.txt  README.md  urma_sample.c
src/urma/hw/udma/: udma_u_buf.c  udma_u_buf.h  udma_u_common.h  udma_u_ctl.c  udma_u_db.c  udma_u_jetty.c  udma_u_jetty.h  (+7 more)
src/urma/lib/: CMakeLists.txt
src/urma/lib/urma/config/: CMakeLists.txt  urma  urma.conf
src/urma/lib/uvs/config/: CMakeLists.txt  tpsa  tpsa.conf
src/urma/tools/: CMakeLists.txt
src/urma/tools/ubagg_cli/: CMakeLists.txt  ubagg_cli.c  ubagg_cli.h
src/urma/tools/urma_admin/config/: CMakeLists.txt  urma_admin.conf
src/urpc/: CMakeLists.txt  cmake_uninstall.cmake.in
src/urpc/config/: CMakeLists.txt  urpc_framework  urpc_framework.conf
src/urpc/examples/: CMakeLists.txt
src/urpc/examples/framework/: CMakeLists.txt  urpc_framework_client.c  urpc_framework_client.h  urpc_framework_common.h  urpc_framework_example.c  urpc_framework_server.c  urpc_framework_server.h
src/urpc/framework/: CMakeLists.txt
src/urpc/include/: CMakeLists.txt
src/urpc/tools/: CMakeLists.txt
src/urpc/tools/perftest/framework/: CMakeLists.txt  urpc_lib_perftest.c  urpc_lib_perftest_allocator.c  urpc_lib_perftest_allocator.h  urpc_lib_perftest_latency.c  urpc_lib_perftest_latency.h  urpc_lib_perftest_param.c  urpc_lib_perftest_param.h  urpc_lib_perftest_qps.c  urpc_lib_perftest_qps.h  urpc_lib_perftest_util.h
src/urpc/umq/: CMakeLists.txt  umq_api.c  umq_inner.h  umq_pro_api.c  umq_vlog.c  umq_vlog.h  util_id_generator.h  util_ipc.c  util_ipc.h  util_vlog.c  util_vlog.h
src/urpc/util/: CMakeLists.txt  urpc_bitmap.c  urpc_bitmap.h  urpc_cmd_queue.c  urpc_cmd_queue.h  urpc_dbuf_stat.c  urpc_dbuf_stat.h  urpc_epoll.c  urpc_epoll.h  urpc_hash.h  urpc_hmap.c  urpc_hmap.h  urpc_id_generator.c  urpc_id_generator.h  urpc_lib_log.c  urpc_lib_log.h  urpc_manage.c  urpc_manage.h  urpc_pool.c  urpc_slab.c  urpc_slab.h  urpc_slist.h  urpc_socket.c  urpc_socket.h  urpc_thread.c  urpc_thread.h  urpc_thread_closure.cpp  urpc_thread_closure.h  urpc_timer.c  urpc_timer.h  urpc_util.c  urpc_util.h  util_vlog.c  util_vlog.h
src/usock/: CMakeLists.txt
src/usock/ums/: CMakeLists.txt
src/usock/ums/tools/: CMakeLists.txt  ums-preload.c  ums_run
src/usock/ums/tools/ums_admin/: ums_admin.c
test/cam/ut/: conftest.py  pytest.ini  run_shell.py
test/intergration_test/: README.ch.md  conftest.py
test/ulock/dlock/: CMakeLists.txt  umdk_dlock_UT.sh
test/urma/bond/: bondp_bitmap_gtest.cpp  bondp_gtest_basic.h  common.h  urma_gtest_basic.h  urma_gtest_main.cpp
test/urma/script/: urma_UT.sh
test/urpc/conf/: config.yaml  project.yaml
test/urpc/hdt_utils/: build.py  clean.py  combine.py  hdt_func.py  incept.py  run.py
test/urpc/lib/: test_keepalive.cpp
test/urpc/protocol/: endian_utils.h  test_big_endian.cpp  test_little_endian.cpp  test_protocol.cpp
test/urpc/util/: test_log.cpp  test_timer.cpp
test/usock/ums/: CMakeLists.txt  README.ch.md  README.md
test/usock/ums/script/: ut_cov.sh
test/usock/ums/ut/: CMakeLists.txt  test_netlink.h  ums_test_ut.cpp  ums_test_ut_client.cpp  ums_test_ut_server.cpp
test/usock/ums/ut/kmode_ut/: CMakeLists.txt  ums_api_test.c
(+436 files in other folders)
